--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "@typescript-eslint/parser": "^6.4.0",
     "eslint": "^8.47.0",
+    "eslint-config-prettier": "^9.0.0",
     "prettier": "^3.0.2",
     "tsup": "^7.2.0",
     "tsx": "^3.12.7",
