--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "prettier": "^3.0.2",
     "tsup": "^7.2.0",
     "tsx": "^3.12.7",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "vitest": "^0.34.1"
   }
 }
