--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "prepare": "husky install"
+    "dev": "tsx watch src/app.ts",
+    "test": "vitest",
+    "prepare": "husky install",
+    "build": "tsup src",
+    "start": "node dist/app.js"
   },
   "keywords": [],
   "author": "",
